# homelab-workspace

./: .gitignore  README.md
.claude/: PROJECT_INDEX.md
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml
api/: package-lock.json  package.json
dashboard/: jest.config.js  package-lock.json  package.json
dashboard/src/: setupTests.ts
docs/plans/: 2026-02-20-env-intelligence-implementation.md  2026-05-13-ttyd-build-prompt.md  2026-06-26-mcp-servers-split-and-homelab-workspace-migration.md  2026-06-26-migration-manifest-DELETE.txt  2026-06-26-migration-manifest-EXTRACT.txt  2026-06-29-learnings-extractor-design.md  2026-06-29-learnings-extractor.md
learnings-extractor/: .gitignore  DEPLOY.md  extract.sh  pyproject.toml  watchdog.sh
learnings-extractor/learnings_extractor/: apply_candidates.py  pipeline.py  prefilter.py
learnings-extractor/prompts/: cluster.md  crosscheck.md
learnings-extractor/tests/: conftest.py  test_apply.py  test_candidates.py  test_dedup.py  test_extract_dryrun.py  test_prefilter.py  test_prompts.py  test_redact.py  (+2 more)
mcp-servers/gmail-manage-mcp-server/: .gitignore  pyproject.toml
mcp-servers/gmail-manage-mcp-server/src/gmail_manage/: auth.py  client.py  server.py
mcp-servers/gmail-manage-mcp-server/tests/: test_auth.py  test_client.py  test_integration.py
mcp-servers/memory-search-mcp-server/: README.md  pyproject.toml
mcp-servers/memory-search-mcp-server/src/memory_search_mcp/: __init__.py  cli.py  core.py  server.py
mcp-servers/memory-search-mcp-server/tests/: test_core.py
wrappers/: gmail-manage.sh
(+11 files in other folders)
