[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_manage"]

[project]
name = "gmail-manage-mcp-server"
version = "1.0.0"
description = "MCP server for Gmail message modification (labels, trash, send, filters)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.10.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]

[project.scripts]
gmail-manage = "gmail_manage.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
