[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_search_mcp"]

[project]
name = "memory-search-mcp-server"
version = "1.0.0"
description = "MCP server for local semantic recall over Claude's memory + learnings (ChromaDB, zero API tokens)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.10.0",
    "chromadb>=1.0.0",
]

[project.scripts]
memory-search = "memory_search_mcp.cli:main"
memory-search-mcp = "memory_search_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
